<resources>
    <string name="app_name">Services</string>
    <string name="start_background_service">Start Background Service</string>
    <string name="stop_background_service">Stop Background Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>
    <string name="start_bound_service">Start Bound Service</string>
    <string name="stop_bound_service">Stop Bound Service</string>
    <string name="start_intent_service">Start Intent Service\n(It should stop by itself after 5 seconds)</string>
</resources>