<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnStartBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_background_service"
        app:layout_constraintBottom_toTopOf="@id/btnStopBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStopBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_background_service"
        app:layout_constraintBottom_toTopOf="@id/btnStartForeground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStartBackground" />

    <Button
        android:id="@+id/btnStartForeground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_foreground_service"
        app:layout_constraintBottom_toTopOf="@id/btnStopForeground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStopBackground" />

    <Button
        android:id="@+id/btnStopForeground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_foreground_service"
        app:layout_constraintBottom_toTopOf="@id/btnStartBound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStartForeground" />

    <Button
        android:id="@+id/btnStartBound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_bound_service"
        app:layout_constraintBottom_toTopOf="@id/btnStopBound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStopForeground" />

    <Button
        android:id="@+id/btnStopBound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_bound_service"
        app:layout_constraintBottom_toTopOf="@id/btnStartIntent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStartBound" />

    <Button
        android:id="@+id/btnStartIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_intent_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStopBound" />

</androidx.constraintlayout.widget.ConstraintLayout>